overflow and mobile view fixes

--- a/css/index.css
+++ b/css/index.css
@@ -198,7 +198,7 @@ nav{
 #Features {
     width: 100%;
     max-height: 670px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 #titleLabel {
@@ -302,6 +302,7 @@ nav{
 }
 
 #description {
+    padding-top: 50px;
     position: relative;
     float: right;
     width: 0; /* 320px*/
@@ -578,6 +579,10 @@ footer {
 }
 
 @media screen and (max-width: 700px){
+    #content {
+        width: 95%;
+    }
+
     #Home {
         width: 100%;
         margin-left: 0;
